--- a/test/Makefile
+++ b/test/Makefile
@@ -1,2 +1,5 @@
+OPTIONS=-Wall -Werror -x c -I../src -I$(UNITY_PATH)src -o
+
+
 build: test_fixed_point_complex.c
-	gcc -Wall -Werror
+	gcc $(OPTIONS) test_fixed_point_complex test_fixed_point_complex.c -L~/workspace/c_project/src -lfixed_point_complex.o
